# fiction-scout

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  ROADMAP.md  mkdocs.yml  noxfile.py  pyproject.toml
docs/: configuration.md  index.md  indexing.md  searching.md
docs/engines/: algolia.md  collection.md  database.md  meilisearch.md
docs/extending/: custom-adapters.md  custom-drivers.md
docs/tutorials/: django-algolia-movies-api.md  fastapi-sqlalchemy-movies-api.md  index.md
examples/django_example/: README.md  app.py  manage.py
examples/django_example/example_project/: settings.py
examples/django_example/example_project/blog/: models.py
src/fiction_scout/: __init__.py  config.py  dependencies.py  exceptions.py  orchestration.py  protocols.py  registry.py  strategies.py
src/fiction_scout/adapters/: __init__.py
src/fiction_scout/adapters/django/: __init__.py  adapter.py  apps.py  mixin.py  runtime.py  signals.py
src/fiction_scout/adapters/django/management/commands/: fiction_scout.py
src/fiction_scout/adapters/sqlalchemy/: adapter.py  events.py  mixin.py  runtime.py
src/fiction_scout/cli/: main.py  model_resolution.py
src/fiction_scout/cli/commands/: create_index.py  delete_index.py  flush.py  import_cmd.py  queue_import.py  sync_index_settings.py
src/fiction_scout/engines/: __init__.py  _external_index.py  algolia.py  base.py  collection.py  database.py  manager.py  meilisearch.py
src/fiction_scout/search/: __init__.py  builder.py
src/fiction_scout/sync/: __init__.py  context.py  dispatcher.py
src/fiction_scout/sync/dispatchers/: celery.py
tests/: conftest.py  support.py  test_cli_main.py  test_cli_model_resolution.py  test_config.py  test_dependencies.py  test_engine_manager.py  test_orchestration.py  test_registry.py
tests/cli/: conftest.py  test_create_index.py  test_delete_index.py  test_flush.py  test_import_cmd.py  test_management_command.py  test_queue_import.py  test_sync_index_settings.py
tests/django_app/: models.py  settings.py
tests/engines/: test_collection_engine.py  test_database_engine.py
tests/search/: test_builder.py
tests/sqlalchemy_app/: models.py
tests/sync/: test_context.py  test_dispatcher.py
tests/test_algolia/: test_algolia_engine.py
tests/test_celery/: models.py  test_celery_dispatcher.py
tests/test_django/: conftest.py  test_adapter.py  test_algolia_integration.py  test_meilisearch_integration.py  test_signals.py
tests/test_meilisearch/: conftest.py  test_meilisearch_engine.py  test_meilisearch_live.py
tests/test_sqlalchemy/: conftest.py  test_adapter.py  test_events.py  test_mixin_parity.py
