[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fiction-scout"
version = "0.1.0"
description = "A simple, driver-based solution for adding full-text search to your models — for Django, Flask, or any Python project."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
authors = [{ name = "David Gaitan" }]
keywords = ["search", "full-text-search", "django", "flask", "sqlalchemy", "scout"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: Django",
    "Framework :: Flask",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = ["click>=8.1"]

[project.optional-dependencies]
django = ["Django>=4.2"]
sqlalchemy = ["SQLAlchemy>=2.0"]
flask = ["Flask>=2.3"]
celery = ["celery>=5.3"]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.8",
    "pytest-cov>=5.0",
    "ruff>=0.6",
    "mypy>=1.11",
    "django-stubs>=5.0",
    "nox>=2024.4.15",
    "pre-commit>=3.7",
]
docs = ["mkdocs>=1.6", "mkdocs-material>=9.5"]

[project.urls]
Homepage = "https://github.com/davidgaitan/fiction-scout"
Documentation = "https://github.com/davidgaitan/fiction-scout/tree/main/docs"
Issues = "https://github.com/davidgaitan/fiction-scout/issues"

[project.scripts]
fiction-scout = "fiction_scout.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/fiction_scout"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "D"]
ignore = [
    "D100", # missing module docstring -- not required, add one only if genuinely useful
    "D101", # missing class docstring -- same
    "D102", # missing method docstring -- same
    "D103", # missing function docstring -- same
    "D104", # missing package docstring -- same
    "D105", # magic-method docstring -- dunder behavior is self-explanatory
    "D106", # missing nested-class docstring -- same as D101
    "D107", # __init__ docstring -- the class docstring already covers it
    "D203", # one-blank-line-before-class -- conflicts with D211
    "D213", # multi-line-summary-second-line -- conflicts with D212
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["D"]
"examples/*" = ["D"]

[tool.mypy]
python_version = "3.9"
strict = true
files = ["src/fiction_scout"]
exclude = ["^src/fiction_scout/adapters/django/", "^src/fiction_scout/adapters/sqlalchemy/"]

[[tool.mypy.overrides]]
module = "fiction_scout.adapters.django.*"
strict = false

[[tool.mypy.overrides]]
module = "fiction_scout.adapters.sqlalchemy.*"
strict = false

[tool.pytest.ini_options]
# DJANGO_SETTINGS_MODULE is intentionally not set here: pytest-django loads
# it eagerly at collection time, which would break every non-Django test run
# when Django isn't installed. Set it via the DJANGO_SETTINGS_MODULE env var
# (see noxfile.py's test_django session) only when actually running the
# Django adapter's test suite.
markers = [
    "django: tests requiring the Django adapter/extra",
    "sqlalchemy: tests requiring the SQLAlchemy adapter/extra",
    "celery: tests requiring the Celery dispatcher/extra",
]
testpaths = ["tests"]
